# example_publish_pip

./: Pipfile  README.rst  build.sh  setup.cfg  test.py
src/gary_example_publish_pip/example/: __init__.py  main.py
