[metadata]
name = gary_example_publish_pip
# https://packaging.python.org/en/latest/guides/single-sourcing-package-version/
version = attr: gary_example_publish_pip.__version__
license = MIT
author = Gary Chung
author_email = kuanwu.chung@gmail.com
packages = find_packages('src')
package_dir = {'': 'src'}
description = This is an example for publishing a project to pip.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://www.proto.cx
project_urls =
    Docs = https://docs.proto.cx/docs
classifiers =
    Framework :: FastAPI

    License :: OSI Approved :: Apache Software License

    Development Status :: 5 - Production/Stable

    Intended Audience :: Developers

    Programming Language :: Python
    Programming Language :: Python :: 3.10

    Topic :: Internet :: WWW/HTTP
